update contract test article

--- a/articles/Test/contract-test.org
+++ b/articles/Test/contract-test.org
@@ -3,6 +3,22 @@
 ** 契约测试
 
 ** 前端契约测试 
-*** mock api data
-传统的前端 api 测试的流程是，运行被测试代码，然后通过测试工具拦截发出的 http 请求，
+*** 目的
+**** 希望解决的问题
+     1. 从前端测试的角度感知 api 变化
+     2. 防止 api 变化对前端功能的破坏
+     3. 
+**** 不希望产生的问题
+     1. 不希望前端契约测试成为一个对 api 的检验工具
+     2. 不希望前端契约测试产生很多的 effort
+     3. 
 
+*** 项目实践
+**** mock api data
+     传统的前端 api 测试的流程是，运行被测试代码，然后通过测试工具拦截发出的 http 请求，然后验证是否 url 和 body 等是否正确，最后返回在测试代码里面写死的返回数据，flush api 请求，验证业务代码的正确性。
+     而...
+
+*** 带来的问题
+**** 消费者驱动
+     在前后端分离的开发模式中，后端无疑是产生者，而前端是消费者
+     但是前端
