--- a/articles/Test/contract-test.org
+++ b/articles/Test/contract-test.org
@@ -7,7 +7,17 @@
 *** 引子：
     曾经在招行的招赢通，我们只要单元测试，虽有几套难产的 e2e 测试，自动化测试，但是明显不能 cover 所有的 case。
     本来也什么，但是前端经历过几次重大 bug 之后，我似乎看透了什么。
+
     [[./contract-test/eye.jpg]]
+    原因：
+    后端修改了接口，但是没有通知前端，问起原因是当时觉得改动很小，就没有通知前端，而前端用到这个接口的地方又比较偏远，也没有故事卡迭代涉及那块，所以也没有测试人员力量覆盖，最终导致了 bug。
+    虽然可能会有其他办法来防止再次发生，例如做技术任务一定要建卡，改了一定要通知前端，但是有人的地方就有江湖，是人写的代码总会有 bug，没有 100% 的 e2e 测试的情况下，后端的接口和前端始终存在一道隔膜，是一道痛。
+    而 e2e 的测试成本太高（请见测试金字塔理论），我们基于进度的压力也写不了全面的 e2e。
+
+    [[./contract-test/naohuo.jpg]]
+
+    但是：
+    当时前后端是契约驱动开发，而后端已经是实现了契约测试了，也就是说，
 
 ** 前端契约测试 
 *** 目的
@@ -58,16 +68,30 @@
 *** 带来的问题
 **** 消费者驱动
      在前后端分离的开发模式中，后端无疑是产生者，而前端是消费者
+
      在契约驱动下的前后端分离开发，有了契约才能分离，定义好了契约，然后前端拿着契约开开心心的生成 mock service 去开发了；而后端也拿着契约写契约测试，开发 api 功能。
+
      但是前端对契约进行了测试了之后，情况就发生了变化：
+
      假设后端有了新需求，或者对接口进行重构，那么可能就会修改现有的接口，后端一旦把新的契约上传了，前端契约测试就会见红，正常情况下，红了就会去修。但是问题来了，假如后端的新需求或者重构没有空闲的前端资源响应，前端资源都在忙，并且专注于制品，那么情况就是：
+
      所有前端都在忙，前端 CI 红了，发现不是自己弄挂的，ignore 掉，继续干活
+
      然后 CI 红了大家都不 push 代码，等着别人来修
+
      久久未绿，终于忍不住问了一下，反正都没有人弄挂，才发现是契约测试挂了
+
      但是契约测试挂了也不是前端弄挂的啊，还是没有人修
+
      直到热心人士的出现，才会有人修，但是这个修的过程特别费事，因为这不仅仅是契约测试挂了，这是因为需要来了或者后端接口变化，又要去了解需求和上下文，又要写代码去 cover 这些变化，实在是累活，又 block 住了原来的工作。
+
      于是乎：
+
      后端为了不影响前端，只能不接新需求，重构接口也必须等到有前端资源配合。
+
      这就直接造成了消费者驱动模式，当然有些团队可能本来就很 match 消费者模式，但是有些团队就未必。
+
      “前端必须比后端做得快。”
+
      这就是消费者驱动的真实写照和要求。
+     
