--- a/articles/Test/contract-test.org
+++ b/articles/Test/contract-test.org
@@ -6,29 +6,35 @@
 ** 契约测试
 *** 引子：
     曾经在招行的招赢通，我们只要单元测试，虽有几套难产的 e2e 测试，自动化测试，但是明显不能 cover 所有的 case。
+
     本来也什么，但是前端经历过几次重大 bug 之后，我似乎看透了什么。
 
     [[./contract-test/eye.jpg]]
-    原因：
-    后端修改了接口，但是没有通知前端，问起原因是当时觉得改动很小，就没有通知前端，而前端用到这个接口的地方又比较偏远，也没有故事卡迭代涉及那块，所以也没有测试人员力量覆盖，最终导致了 bug。
-    虽然可能会有其他办法来防止再次发生，例如做技术任务一定要建卡，改了一定要通知前端，但是有人的地方就有江湖，是人写的代码总会有 bug，没有 100% 的 e2e 测试的情况下，后端的接口和前端始终存在一道隔膜，是一道痛。
-    而 e2e 的测试成本太高（请见测试金字塔理论），我们基于进度的压力也写不了全面的 e2e。
 
+    原因：
+
+    后端修改了接口，但是没有通知前端，问起原因是当时觉得改动很小，就没有通知前端，而前端用到这个接口的地方又比较偏远，也没有故事卡迭代涉及那块，所以也没有测试人员力量覆盖，最终导致了 bug。
+
+    虽然可能会有其他办法来防止再次发生，例如做技术任务一定要建卡，改了一定要通知前端，但是有人的地方就有江湖，是人写的代码总会有 bug，没有 100% 的 e2e 测试的情况下，后端的接口和前端始终存在一道隔膜，是一道痛。
+
+    而 e2e 的测试成本太高（请见测试金字塔理论），我们基于进度的压力也写不了全面的 e2e。
+    
     [[./contract-test/naohuo.jpg]]
 
     但是：
-    当时前后端是契约驱动开发，而后端已经是实现了契约测试了，也就是说，
+
+    当时前后端是契约驱动开发，而后端已经是实现了契约测试了，也就是说，后端的实现是按照契约的来的，那么，只要前端对契约进行了检查，那么前后端的“隔膜”就不会那么明显了，后端修改了契约，那么前端就能知道，去响应这个变化，防止后端的变化多前端功能破坏。
 
 ** 前端契约测试 
+在招行智能保险项目，因为是深圳成都两地开发，也是用契约分离前后端，和祁兮研究了一下，我想尝试一下在前端的契约测试。
+
 *** 目的
 **** 希望解决的问题
      1. 从前端测试的角度感知 api 变化
      2. 防止 api 变化对前端功能的破坏
-     3. 
 **** 不希望产生的问题
      1. 不希望前端契约测试成为一个对 api 的检验工具
      2. 不希望前端契约测试产生很多的 effort
-     3. 
 
 *** 项目实践
 **** mock api data
@@ -62,6 +68,50 @@
       )
     );
 #+END_SRC
+上面代码中，getContractResponse 这个函数通过契约的路径获取契约生成出来的 response data
+
+而 InsureCompanyService 这个 Angular service 是一个保险公司的 service，它有一个 public 方法叫 getCompanysSelectOption 来获取保险公司，然后组装成 select options
+
+我们很正常的用 http requet mock 这种套路来 mock 请求，然后 flush 数据，验证请求后的运行结果，断言。
+
+以前的做法是在测试代码中硬编码 mock 数据，例如下面一样
+#+BEGIN_SRC json
+  [
+    {
+        "code": "002",
+        "name": "泰康人寿"
+    },
+    {
+        "code": "101",
+        "name": "信诺人寿"
+    },
+    {
+        "code": "102",
+        "name": "生命人寿"
+    },
+    ...
+  ]
+#+END_SRC
+
+然后 flush 到 requestMock 中
+
+但是以前的做法有几点限制：
+
+1. 这个硬编码其实是前端自己从契约中拷出来的，跟之前的契约没有了联系；
+2. 而且有时候契约可能会很长，mock 一大块在测试代码中非常难看；
+3. 而且有时候会对一些字端删掉，虽然对测试没有影响，但是有一些地方可能会没有关注到，例如其实是有数据 render 到 html 中的，虽然测试中没有这个字段也能跑过，但是 render 的那部分就相当于忽略了，以后有问题也无法发现;
+4. 要是接口修改了，mock 数据可能还是没变，这个测试可能就名存实亡了
+
+而前端契约测试的实践会顺便把契约的 response 作为输入 flush 到 httpMock 中，那么上面的几点限制都会得到解决。
+
+当然前端契约测试的重点还是这个:
+
+
+#+BEGIN_SRC typescript
+assert.hasAllKeys(response[0], ['name', 'code']);
+#+END_SRC
+
+十分简单明了，测试契约中的数组元素是否含有 name 和 code 这两个字端
 
 
 
@@ -94,4 +144,8 @@
      “前端必须比后端做得快。”
 
      这就是消费者驱动的真实写照和要求。
+
+*** 可以做的更好的地方
+**** 对类型进行判断
+**** 运行时解析 typescript type
      
