--- a/articles/Test/contract-test.org
+++ b/articles/Test/contract-test.org
@@ -1,5 +1,5 @@
 #+TITLE: 前端契约测试实践
-#+AUTHOR: 陳放為
+#+AUTHOR: 陈灿豪
 
 * 前端契约测试实践
 
@@ -40,6 +40,9 @@
 **** mock api data
      传统的前端 api 测试的流程是，运行被测试代码，然后通过测试工具拦截发出的 http 请求，然后验证是否 url 和 body 等是否正确，最后返回在测试代码里面写死的返回数据，flush api 请求，验证业务代码的正确性。
      来着项目成员代码事例: (不喜勿喷）
+
+     [[./contract-test/wanle.JPG]]
+
      #+BEGIN_SRC typescript
   it(
     'getCompanysSelectOption',
@@ -102,6 +105,8 @@
 3. 而且有时候会对一些字端删掉，虽然对测试没有影响，但是有一些地方可能会没有关注到，例如其实是有数据 render 到 html 中的，虽然测试中没有这个字段也能跑过，但是 render 的那部分就相当于忽略了，以后有问题也无法发现;
 4. 要是接口修改了，mock 数据可能还是没变，这个测试可能就名存实亡了
 
+[[./contract-test/yo.GIF]]
+
 而前端契约测试的实践会顺便把契约的 response 作为输入 flush 到 httpMock 中，那么上面的几点限制都会得到解决。
 
 当然前端契约测试的重点还是这个:
@@ -111,12 +116,11 @@
 assert.hasAllKeys(response[0], ['name', 'code']);
 #+END_SRC
 
-十分简单明了，测试契约中的数组元素是否含有 name 和 code 这两个字端
+[[./contract-test/litte.jpg]]
 
+十分简单明了，测试契约中的数组元素是否含有 name 和 code 这两个字端，进行字段检查，如果后端修改了字段名，或者删除，或者增加，都会让这个测试 case 挂掉，从而发现契约的修改。
 
-
-*** 带来的问题
-**** 消费者驱动
+*** 带来的问题: 消费者驱动
      在前后端分离的开发模式中，后端无疑是产生者，而前端是消费者
 
      在契约驱动下的前后端分离开发，有了契约才能分离，定义好了契约，然后前端拿着契约开开心心的生成 mock service 去开发了；而后端也拿着契约写契约测试，开发 api 功能。
@@ -131,6 +135,8 @@ assert.hasAllKeys(response[0], ['name', 'code']);
 
      久久未绿，终于忍不住问了一下，反正都没有人弄挂，才发现是契约测试挂了
 
+     [[./contract-test/green.gif]]
+
      但是契约测试挂了也不是前端弄挂的啊，还是没有人修
 
      直到热心人士的出现，才会有人修，但是这个修的过程特别费事，因为这不仅仅是契约测试挂了，这是因为需要来了或者后端接口变化，又要去了解需求和上下文，又要写代码去 cover 这些变化，实在是累活，又 block 住了原来的工作。
@@ -143,9 +149,28 @@ assert.hasAllKeys(response[0], ['name', 'code']);
 
      “前端必须比后端做得快。”
 
-     这就是消费者驱动的真实写照和要求。
+     这就是消费者驱动的真实写照和要求，通常这是一个很大的挑战和弊端。
+
+     [[./contract-test/sad.jpg]]
+
+*** hasAllKeys or containsAllkeys
+    我们在实践中，发现如何断言字段有两种方法
+
+    一种是 hasAllKeys, 这是断言对象中只能存在一些字段，如果有多的字段，则断言错误
+    一种是 containesAllKeys, 断言对象中包含一些字段，是所有字段的子集
+
+    我们曾经用 hasAllKeys，但是后端增加了字段，则会导致测试挂彩，后面我们尝试使用 containsAllKeys，那样的话后端增加了字段契约测试不会挂。
+    
+    但是这样的话会造成契约测试不严谨，然后在消费者驱动的模式下，因为后端的修改都有前端配合，所以最好还是使用 hasAllKeys 来严谨约束
 
 *** 可以做的更好的地方
 **** 对类型进行判断
+     大家看上面可以发现，其实我们的实践对契约的检查，只是简单的判断了一下字段存在与否，对字段的类型和格式是完全不管的，如果整个套路要做的更好，还是需要把判断类型和格式的功能加上。
+
 **** 运行时解析 typescript type
-     
+     因为项目是用 typescript 来写的，所以我们在后端返回的 response 上是有资料类型定义的，只可惜 typescript 的类型只存在于编译期，在测试的运行期没法使用，真是太可惜了。
+
+
+     当然如果有工具能在运行期调用调用 node，把 ts 的 type 提取出来，做成一个判断对象，那就最好不过了。
+
+[[./contract-test/tech.jpg]]
