--- a/articles/Test/contract-test.org
+++ b/articles/Test/contract-test.org
@@ -5,9 +5,9 @@
 
 ** 契约测试
 *** 引子：
-    曾经在招行的招赢通，我们只要单元测试，虽有几套难产的 e2e 测试，自动化测试，但是明显不能 cover 所有的 case。
-
-    本来也什么，但是前端经历过几次重大 bug 之后，我似乎看透了什么。
+    曾经在招行的招赢通，我们只有单元测试，还有几套 e2e 测试，但是都因为业务进度的压力，只覆盖了几个基本的场景。
+    
+    本来大家觉得也什么，但是前端经历过几次重大 bug 之后，我似乎看透了什么。
 
     [[./contract-test/eye.jpg]]
 
@@ -25,16 +25,32 @@
 
     当时前后端是契约驱动开发，而后端已经是实现了契约测试了，也就是说，后端的实现是按照契约的来的，那么，只要前端对契约进行了检查，那么前后端的“隔膜”就不会那么明显了，后端修改了契约，那么前端就能知道，去响应这个变化，防止后端的变化多前端功能破坏。
 
+
 ** 前端契约测试 
-在招行智能保险项目，因为是深圳成都两地开发，也是用契约分离前后端，和祁兮研究了一下，我想尝试一下在前端的契约测试。
+在招行智能保险项目，因为是深圳成都两地开发，也是用契约分离前后端，并跟前后端共享契约，和祁兮讨论了一下，我想祁兮的根据《共享契约》一文中的前端契约测试理念来尝试一下前端的契约测试。
 
 *** 目的
+    根据《共享契约》中的理念，支持前端契约测试，针对项目具体的情况，列了前端契约测试要解决的问题和不希望产生的问题：
 **** 希望解决的问题
      1. 从前端测试的角度感知 api 变化
      2. 防止 api 变化对前端功能的破坏
 **** 不希望产生的问题
      1. 不希望前端契约测试成为一个对 api 的检验工具
      2. 不希望前端契约测试产生很多的 effort
+
+*** 前后端共享契约
+在招赢通项目里，我们对契约的实践演化成“共享契约”，(关于共享契约可以看一下祁兮写的《[[http://qixi.com][共享契约]]》)。
+
+共享契约有几个特点:
+
+1. 它和基于Schema的几个工具一样，需要定义契约文件。契约文件独立于前后端代码，前后端开发人员都可以对其制定和修改，契约是前后端共享的，所以称之为共享契约。
+2. 共享契约模式的契约也是基于Example的，所以可以运行成Mock Server。
+3. 前端可以使用Mock Server编写契约测试。
+4. 由于是基于Example的，后端测试的问题也解决了。
+
+
+总的来说，共享契约就是现在很多项目都在实践的：前端用契约来跑 mock server，可以让前后端
+
 
 *** 项目实践
 **** mock api data
@@ -174,3 +190,9 @@ assert.hasAllKeys(response[0], ['name', 'code']);
      当然如果有工具能在运行期调用调用 node，把 ts 的 type 提取出来，做成一个判断对象，那就最好不过了。
 
 [[./contract-test/tech.jpg]]
+
+-----
+参考:
+[[共享契约]]
+[[https://martinfowler.com/articles/consumerDrivenContracts.html]]
+
