--- a/articles/Test/contract-test.org
+++ b/articles/Test/contract-test.org
@@ -27,7 +27,21 @@
 
 
 ** 前端契约测试 
-在招行智能保险项目，因为是深圳成都两地开发，也是用契约分离前后端，并跟前后端共享契约，和祁兮讨论了一下，我想祁兮的根据《共享契约》一文中的前端契约测试理念来尝试一下前端的契约测试。
+在招行智能保险项目，因为是深圳成都两地开发，也是用契约分离前后端，并跟前后端共享契约，和祁兮讨论了一下，我想祁兮的《共享契约》一文中前端契约测试理念来尝试一下前端契约测试。
+
+*** 前后端共享契约
+在招赢通项目里，我们对契约的实践演化成“共享契约”，
+
+关于共享契约可以看一下祁兮写的《[[http://qixi.com][共享契约]]》，共享契约有几个特点:
+
+1. 它和基于Schema的几个工具一样，需要定义契约文件。契约文件独立于前后端代码，前后端开发人员都可以对其制定和修改，契约是前后端共享的，所以称之为共享契约。
+2. 共享契约模式的契约也是基于Example的，所以可以运行成Mock Server。
+3. 前端可以使用Mock Server编写契约测试。
+4. 由于是基于Example的，后端测试的问题也解决了。
+
+总的来说，共享契约就是现在很多项目都在实践的：前端用契约来跑 mock server，可以让前后端的开发工作不互相依赖。
+
+那么有了共享契约，而契约对于前端后的开发确实有好处，那么前端对契约的测试则变得很有必要，毕竟前后端的“沟通”是基于契约的。
 
 *** 目的
     根据《共享契约》中的理念，支持前端契约测试，针对项目具体的情况，列了前端契约测试要解决的问题和不希望产生的问题：
@@ -38,24 +52,11 @@
      1. 不希望前端契约测试成为一个对 api 的检验工具
      2. 不希望前端契约测试产生很多的 effort
 
-*** 前后端共享契约
-在招赢通项目里，我们对契约的实践演化成“共享契约”，(关于共享契约可以看一下祁兮写的《[[http://qixi.com][共享契约]]》)。
 
-共享契约有几个特点:
-
-1. 它和基于Schema的几个工具一样，需要定义契约文件。契约文件独立于前后端代码，前后端开发人员都可以对其制定和修改，契约是前后端共享的，所以称之为共享契约。
-2. 共享契约模式的契约也是基于Example的，所以可以运行成Mock Server。
-3. 前端可以使用Mock Server编写契约测试。
-4. 由于是基于Example的，后端测试的问题也解决了。
-
-
-总的来说，共享契约就是现在很多项目都在实践的：前端用契约来跑 mock server，可以让前后端
-
-
-*** 项目实践
+*** 前端契约测试实践
 **** mock api data
      传统的前端 api 测试的流程是，运行被测试代码，然后通过测试工具拦截发出的 http 请求，然后验证是否 url 和 body 等是否正确，最后返回在测试代码里面写死的返回数据，flush api 请求，验证业务代码的正确性。
-     来着项目成员代码事例: (不喜勿喷）
+     来着项目成员代码事例：
 
      [[./contract-test/wanle.JPG]]
 
@@ -118,7 +119,7 @@
 
 1. 这个硬编码其实是前端自己从契约中拷出来的，跟之前的契约没有了联系；
 2. 而且有时候契约可能会很长，mock 一大块在测试代码中非常难看；
-3. 而且有时候会对一些字端删掉，虽然对测试没有影响，但是有一些地方可能会没有关注到，例如其实是有数据 render 到 html 中的，虽然测试中没有这个字段也能跑过，但是 render 的那部分就相当于忽略了，以后有问题也无法发现;
+3. 而且有时候会对一些字段删掉，虽然对测试没有影响，但是有一些地方可能会没有关注到，例如其实是有数据 render 到 html 中的，虽然测试中没有这个字段也能跑过，但是 render 的那部分就相当于忽略了，以后有问题也无法发现;
 4. 要是接口修改了，mock 数据可能还是没变，这个测试可能就名存实亡了
 
 [[./contract-test/yo.GIF]]
@@ -134,9 +135,9 @@ assert.hasAllKeys(response[0], ['name', 'code']);
 
 [[./contract-test/litte.jpg]]
 
-十分简单明了，测试契约中的数组元素是否含有 name 和 code 这两个字端，进行字段检查，如果后端修改了字段名，或者删除，或者增加，都会让这个测试 case 挂掉，从而发现契约的修改。
+十分简单明了，测试契约中的数组元素是否含有 name 和 code 这两个字段，进行字段检查，如果后端修改了字段名，或者删除，或者增加，都会让这个测试 case 挂掉，从而发现契约的修改。
 
-*** 带来的问题: 消费者驱动
+*** 带来的问题: 消费者驱动的契约
      在前后端分离的开发模式中，后端无疑是产生者，而前端是消费者
 
      在契约驱动下的前后端分离开发，有了契约才能分离，定义好了契约，然后前端拿着契约开开心心的生成 mock service 去开发了；而后端也拿着契约写契约测试，开发 api 功能。
@@ -160,24 +161,30 @@ assert.hasAllKeys(response[0], ['name', 'code']);
      于是乎：
 
      后端为了不影响前端，只能不接新需求，重构接口也必须等到有前端资源配合。
-
-     这就直接造成了消费者驱动模式，当然有些团队可能本来就很 match 消费者模式，但是有些团队就未必。
-
-     “前端必须比后端做得快。”
-
-     这就是消费者驱动的真实写照和要求，通常这是一个很大的挑战和弊端。
-
+     
+     这就直接迫变成[[https://martinfowler.com/articles/consumerDrivenContracts.html][消费者驱动契约]]，当然有些团队可能本来就很 match 消费者驱动契约，但是有些团队就未必，而对保险项目来说，在前端来看，后端作为提供商提供的服务是权威的，消费者驱动契约并不适合。
+     
      [[./contract-test/sad.jpg]]
+
+     最终
+     
 
 *** hasAllKeys or containsAllkeys
     我们在实践中，发现如何断言字段有两种方法
-
-    一种是 hasAllKeys, 这是断言对象中只能存在一些字段，如果有多的字段，则断言错误
+    
+    一种是 hasAllKeys, 这是断言对象中只能存在一些字段，如果有多的字段，则断言错误,
     一种是 containesAllKeys, 断言对象中包含一些字段，是所有字段的子集
 
     我们曾经用 hasAllKeys，但是后端增加了字段，则会导致测试挂彩，后面我们尝试使用 containsAllKeys，那样的话后端增加了字段契约测试不会挂。
     
-    但是这样的话会造成契约测试不严谨，然后在消费者驱动的模式下，因为后端的修改都有前端配合，所以最好还是使用 hasAllKeys 来严谨约束
+    但是使用 containesAllKeys (前端只检查关心的字段)，这其实是对后端写向下兼容 API 的要求。
+
+    但是说到这里其实又涉及到[[https://martinfowler.com/articles/consumerDrivenContracts.html][消费者驱动契约]]，不想讨论太多，在前端契约测试实践中，我觉得适合团队和项目的，才是最好的。
+
+    当然我们在遇到这个问题的时候也没有严格按照消费者驱动契约或者提供者驱动契约，毕竟消费者驱动契约对前端有更高的要求：架构能力，服务设计，更多的 manday 之类的，并且得考虑一组契约的兼容性，不权威性造成的 API 冗余等。
+    
+    我们最终根据项目情况（前端资源不足）考虑还是后端定义契约，并由前端推动，并用 hasAllKeys 测试契约，因为我们项目可能不需要考虑不同版本的兼容性（我们只交付一次）
+    
 
 *** 可以做的更好的地方
 **** 对类型进行判断
@@ -186,13 +193,12 @@ assert.hasAllKeys(response[0], ['name', 'code']);
 **** 运行时解析 typescript type
      因为项目是用 typescript 来写的，所以我们在后端返回的 response 上是有资料类型定义的，只可惜 typescript 的类型只存在于编译期，在测试的运行期没法使用，真是太可惜了。
 
-
      当然如果有工具能在运行期调用调用 node，把 ts 的 type 提取出来，做成一个判断对象，那就最好不过了。
 
 [[./contract-test/tech.jpg]]
 
------
-参考:
+
+******* 参考:
 [[共享契约]]
 [[https://martinfowler.com/articles/consumerDrivenContracts.html]]
 
