--- a/articles/Test/contract-test.org
+++ b/articles/Test/contract-test.org
@@ -25,7 +25,6 @@
 
     当时前后端是契约驱动开发，而后端已经是实现了契约测试了，也就是说，后端的实现是按照契约的来的，那么，只要前端对契约进行了检查，那么前后端的“隔膜”就不会那么明显了，后端修改了契约，那么前端就能知道，去响应这个变化，防止后端的变化多前端功能破坏。
 
-
 ** 前端契约测试 
 在招行智能保险项目，因为是深圳成都两地开发，也是用契约分离前后端，并跟前后端共享契约，和祁兮讨论了一下，我想祁兮的《共享契约》一文中前端契约测试理念来尝试一下前端契约测试。
 
@@ -48,19 +47,90 @@
 **** 希望解决的问题
      1. 从前端测试的角度感知 api 变化
      2. 防止 api 变化对前端功能的破坏
+     3. 把契约的数据带到单元测试中使用
 **** 不希望产生的问题
-     1. 不希望前端契约测试成为一个对 api 的检验工具
-     2. 不希望前端契约测试产生很多的 effort
-
+     1. 不希望前端契约测试产生很多的 effort
 
 *** 前端契约测试实践
-**** mock api data
-     传统的前端 api 测试的流程是，运行被测试代码，然后通过测试工具拦截发出的 http 请求，然后验证是否 url 和 body 等是否正确，最后返回在测试代码里面写死的返回数据，flush api 请求，验证业务代码的正确性。
-     来着项目成员代码事例：
+**** 普通单元测试
+为什么第三点上说要把契约的数据带到单元测试中呢，我们先看看普通的单元测试：
 
-     [[./contract-test/wanle.JPG]]
+之前的前端 api 测试的流程是，运行被测试代码，然后通过测试工具拦截发出的 http 请求，然后断言是否 url 和 body 等是否正确，最后返回在测试代码里面硬编码的返回数据，刷新(flush) api 请求，验证业务代码的正确性。
 
-     #+BEGIN_SRC typescript
+以 Angular 这个框架为例，摘一段代码解释下：
+
+#+BEGIN_SRC javascript
+it('can test HttpClient.get', () => {
+  const testData: Data = {name: 'Test Data'}; // 这是硬编码的数据
+
+  httpClient.get<Data>(testUrl)
+    .subscribe(data =>
+      expect(data).toEqual(testData)
+    );
+
+  const req = httpTestingController.expectOne('/data'); // 断言请求 url
+
+  expect(req.request.method).toEqual('GET'); // 断言请求方法
+
+  req.flush(testData); // 刷新数据
+
+  httpTestingController.verify();
+});
+#+END_SRC
+
+当然实际的测试数据可能是这样长：
+#+BEGIN_SRC json
+{
+  "insureCaseAttachmentUrl": "http://foo908856208.com",
+  "insureDescAttachmentName": "ZEFRGRWWUETOESHVYSUM",
+  "insureCaseImg": "http://foo656166685.com",
+  "termAttachments": [
+    {
+      "name": "KPWVSFUQUCRKZVINGYEW",
+      "url": "http://foo1216644492.com"
+    }
+  ],
+  "snapshotEarliestCreatedAt": "KMUVIEWGTWCBCVCYGXGW",
+  "thumbImg": "http://foo-99948293.com",
+  "advImgName": "QVZOTOHCFFWUKVXZBRQO",
+  "explainImgName": "MSOWHEVEWSRVDQIZNHVK",
+  "suitableTags": [
+    "JYICYUGCBGPRKQGRIVSJ"
+  ],
+  "abbreviation": "PZOKLYMOMSYQHNGQRYHV",
+  "advImg": "http://foo2009893294.com",
+  "insureCaseAttachmentName": "XTHXZZYPYWVCNZRHIDVI",
+  "ybtId": "EXFNVEGSGQUCZIBGNQHI",
+  "companyCategoryName": "DKXFYUEMOXWNMAXCADZK",
+  "feature": "ZZZYSEAKIGEYOCHMTBUA",
+  "insureDesc": "KHEZKVSVFNELHJGJKCUO",
+  "insureCaseImgName": "TEDBHVQDDIWOKBSBSAJV",
+  "insureDescAttachmentUrl": "http://foo-1831893498.com",
+  "id": "-1949960696",
+  "termName": "ELUAFBAMJLQDRHJCEZYJ",
+  "thumbImgName": "FZWNWGMXYLOQILOTITTG",
+  "explainImg": "http://foo393621963.com"
+}
+#+END_SRC
+
+如上的 mock 测试方法论在前端基于契约开发中存在了很多不足:
+
+1. 实际单元测试中，这个硬编码很有可能是前端自己从契约中拷出来的，跟之前的契约没有了联系；
+2. 而且有时候契约可能会很长，mock 一大块在测试代码中非常难看；
+3. 要是接口修改了，这个测试的 mock 数据可能还是没变，这个测试可能就名存实亡了
+
+
+*** 前端契约测试
+那么，我们究竟是怎么进行前端测试呢
+
+我们的思路是:
+
+1. 基于普通的测试修改，用契约的数据来替代硬编码的测试数据
+2. 对契约的数据进行断言测试
+
+先看看来着项目实际代码例子：
+
+#+BEGIN_SRC typescript
   it(
     'getCompanysSelectOption',
     inject(
@@ -88,13 +158,7 @@
       )
     );
 #+END_SRC
-上面代码中，getContractResponse 这个函数通过契约的路径获取契约生成出来的 response data
 
-而 InsureCompanyService 这个 Angular service 是一个保险公司的 service，它有一个 public 方法叫 getCompanysSelectOption 来获取保险公司，然后组装成 select options
-
-我们很正常的用 http requet mock 这种套路来 mock 请求，然后 flush 数据，验证请求后的运行结果，断言。
-
-以前的做法是在测试代码中硬编码 mock 数据，例如下面一样
 #+BEGIN_SRC json
   [
     {
@@ -113,78 +177,26 @@
   ]
 #+END_SRC
 
-然后 flush 到 requestMock 中
+上面代码中，getContractResponse 这个函数通过契约的路径获取契约生成出来的 response data
 
-但是以前的做法有几点限制：
+而 InsureCompanyService 这个 Angular service 是一个保险公司的 service，它有一个 public 方法叫 getCompanysSelectOption 来获取保险公司，然后组装成 select options
 
-1. 这个硬编码其实是前端自己从契约中拷出来的，跟之前的契约没有了联系；
-2. 而且有时候契约可能会很长，mock 一大块在测试代码中非常难看；
-3. 而且有时候会对一些字段删掉，虽然对测试没有影响，但是有一些地方可能会没有关注到，例如其实是有数据 render 到 html 中的，虽然测试中没有这个字段也能跑过，但是 render 的那部分就相当于忽略了，以后有问题也无法发现;
-4. 要是接口修改了，mock 数据可能还是没变，这个测试可能就名存实亡了
+我们用测试工具 mock 请求，断言，然后 flush 数据，验证请求后的运行结果。
 
-[[./contract-test/yo.GIF]]
-
-而前端契约测试的实践会顺便把契约的 response 作为输入 flush 到 httpMock 中，那么上面的几点限制都会得到解决。
-
-当然前端契约测试的重点还是这个:
-
+并用这行代码断言测试契约中的数组元素是否含有 name 和 code 这两个字段，进行字段检查，如果后端修改了字段名，或者删除，或者增加，都会让这个测试 case 挂掉，从而发现契约的修改。
 
 #+BEGIN_SRC typescript
 assert.hasAllKeys(response[0], ['name', 'code']);
 #+END_SRC
 
+这个真实的测试例子跟普通的请求测试的不同点就在于：
+
+1. 测试数据是从契约那里拿的，保持了数据的唯一性
+2. 对契约的数据进行了测试
+
+十分简单，只是增加了几行代码，并不会造成很大的 effort。
+
 [[./contract-test/litte.jpg]]
-
-十分简单明了，测试契约中的数组元素是否含有 name 和 code 这两个字段，进行字段检查，如果后端修改了字段名，或者删除，或者增加，都会让这个测试 case 挂掉，从而发现契约的修改。
-
-*** 带来的问题: 消费者驱动的契约
-     在前后端分离的开发模式中，后端无疑是产生者，而前端是消费者
-
-     在契约驱动下的前后端分离开发，有了契约才能分离，定义好了契约，然后前端拿着契约开开心心的生成 mock service 去开发了；而后端也拿着契约写契约测试，开发 api 功能。
-
-     但是前端对契约进行了测试了之后，情况就发生了变化：
-
-     假设后端有了新需求，或者对接口进行重构，那么可能就会修改现有的接口，后端一旦把新的契约上传了，前端契约测试就会见红，正常情况下，红了就会去修。但是问题来了，假如后端的新需求或者重构没有空闲的前端资源响应，前端资源都在忙，并且专注于制品，那么情况就是：
-
-     所有前端都在忙，前端 CI 红了，发现不是自己弄挂的，ignore 掉，继续干活
-
-     然后 CI 红了大家都不 push 代码，等着别人来修
-
-     久久未绿，终于忍不住问了一下，反正都没有人弄挂，才发现是契约测试挂了
-
-     [[./contract-test/green.gif]]
-
-     但是契约测试挂了也不是前端弄挂的啊，还是没有人修
-
-     直到热心人士的出现，才会有人修，但是这个修的过程特别费事，因为这不仅仅是契约测试挂了，这是因为需要来了或者后端接口变化，又要去了解需求和上下文，又要写代码去 cover 这些变化，实在是累活，又 block 住了原来的工作。
-
-     于是乎：
-
-     后端为了不影响前端，只能不接新需求，重构接口也必须等到有前端资源配合。
-     
-     这就直接迫变成[[https://martinfowler.com/articles/consumerDrivenContracts.html][消费者驱动契约]]，当然有些团队可能本来就很 match 消费者驱动契约，但是有些团队就未必，而对保险项目来说，在前端来看，后端作为提供商提供的服务是权威的，消费者驱动契约并不适合。
-     
-     [[./contract-test/sad.jpg]]
-
-     最终
-     
-
-*** hasAllKeys or containsAllkeys
-    我们在实践中，发现如何断言字段有两种方法
-    
-    一种是 hasAllKeys, 这是断言对象中只能存在一些字段，如果有多的字段，则断言错误,
-    一种是 containesAllKeys, 断言对象中包含一些字段，是所有字段的子集
-
-    我们曾经用 hasAllKeys，但是后端增加了字段，则会导致测试挂彩，后面我们尝试使用 containsAllKeys，那样的话后端增加了字段契约测试不会挂。
-    
-    但是使用 containesAllKeys (前端只检查关心的字段)，这其实是对后端写向下兼容 API 的要求。
-
-    但是说到这里其实又涉及到[[https://martinfowler.com/articles/consumerDrivenContracts.html][消费者驱动契约]]，不想讨论太多，在前端契约测试实践中，我觉得适合团队和项目的，才是最好的。
-
-    当然我们在遇到这个问题的时候也没有严格按照消费者驱动契约或者提供者驱动契约，毕竟消费者驱动契约对前端有更高的要求：架构能力，服务设计，更多的 manday 之类的，并且得考虑一组契约的兼容性，不权威性造成的 API 冗余等。
-    
-    我们最终根据项目情况（前端资源不足）考虑还是后端定义契约，并由前端推动，并用 hasAllKeys 测试契约，因为我们项目可能不需要考虑不同版本的兼容性（我们只交付一次）
-    
 
 *** 可以做的更好的地方
 **** 对类型进行判断
@@ -198,7 +210,53 @@ assert.hasAllKeys(response[0], ['name', 'code']);
 [[./contract-test/tech.jpg]]
 
 
+
+
+*** 带来的问题: 消费者驱动的契约
+     在前后端分离的开发模式中，后端无疑是提供服务者，而前端是消费者
+
+     在契约驱动下的前后端分离开发，有了契约才能分离，定义好了契约，然后前端拿着契约开开心心的生成 mock service 去开发了；而后端也拿着契约写契约测试，开发 api 功能。
+
+     但是前端对契约进行了测试了之后，情况就发生了变化：
+
+     假设后端有了新需求，或者对接口进行重构，那么可能就会修改现有的接口，后端一旦把新的契约上传了，前端契约测试就会见红，正常情况下，红了就会去修。但是问题来了，假如后端的新需求或者重构没有空闲的前端资源响应，前端资源都在忙，并且专注于制品，那么情况就是：
+
+     所有前端都在忙，前端 CI 红了，发现不是自己弄挂的，ignore 掉，继续干活
+
+     然后 CI 红了大家都不 push 代码，等着别人来修
+
+     CI 久久未绿，终于忍不住问了一下，反正都没有人弄挂，才发现是契约测试挂了
+
+     [[./contract-test/green.gif]]
+
+     但是契约测试挂了也不是前端弄挂的啊，还是没有人修
+
+     直到热心人士的出现，才会有人修，但是这个修的过程特别费事，因为这不仅仅是契约测试挂了，这是因为需要来了或者后端接口变化，又要去了解需求和上下文，又要写代码去 cover 这些变化，实在是累活，又 block 住了原来的工作。
+
+     于是乎：
+
+     后端为了不影响前端，只能不接新需求，重构接口也必须等到有前端资源配合。
+     
+     这就直接迫使[[https://martinfowler.com/articles/consumerDrivenContracts.html][消费者驱动契约]]的开发模式，当然有些团队可能本来就很 match 消费者驱动契约，但是有些团队就未必，而对保险项目来说，在前端来看，后端作为提供商提供的服务是权威的，契约也是后端定的，前端去搞消费者驱动契约并不适合。
+     
+     [[./contract-test/sad.jpg]]
+
+
+*** hasAllKeys or containsAllkeys
+    我们在实践中，发现如何断言字段有两种方法
+    
+    一种是 hasAllKeys, 这是断言对象中只能存在一些字段，如果有多的字段，则断言错误,
+    一种是 containesAllKeys, 断言对象中包含一些字段，是所有字段的子集
+
+    我们曾经用 hasAllKeys，但是后端增加了字段，则会导致测试挂彩，后面我们尝试使用 containsAllKeys，那样的话后端增加了字段契约测试不会挂。
+    
+    但是使用 containesAllKeys (前端只检查关心的字段)，这其实是要求后端写向下兼容 API，但是对我们项目来说，我们项目只交付一次，前后端开发也是同时进行的，写向下兼容的 API 显然是不必要的。
+
+    我们最终根据项目情况（前端资源不足）考虑还是后端定义契约，并由前端推动，并用 hasAllKeys 测试契，严格测试 API 的字段。
+    
+
+
 ******* 参考:
-[[共享契约]]
+# [[共享契约]]
 [[https://martinfowler.com/articles/consumerDrivenContracts.html]]
 
