--- a/articles/Test/contract-test.org
+++ b/articles/Test/contract-test.org
@@ -5,7 +5,7 @@
 
 ** 契约测试
 *** 引子：
-    曾经在招行的招赢通，我们只有单元测试，还有几套 e2e 测试，但是都因为业务进度的压力，只覆盖了几个基本的场景。
+    曾经在项目里，我们只有单元测试，还有几套 e2e 测试，但是都因为业务进度的压力，只覆盖了几个基本的场景。
     
     本来大家觉得也什么，但是前端经历过几次重大 bug 之后，我似乎看透了什么。
 
@@ -26,7 +26,7 @@
     当时前后端是契约驱动开发，而后端已经是实现了契约测试了，也就是说，后端的实现是按照契约的来的，那么，只要前端对契约进行了检查，那么前后端的“隔膜”就不会那么明显了，后端修改了契约，那么前端就能知道，去响应这个变化，防止后端的变化多前端功能破坏。
 
 ** 前端契约测试 
-在招行智能保险项目，因为是深圳成都两地开发，也是用契约分离前后端，并跟前后端共享契约，和祁兮讨论了一下，我想祁兮的《共享契约》一文中前端契约测试理念来尝试一下前端契约测试。
+在另一个项目，因为是深圳成都两地开发，也是用契约分离前后端，并跟前后端共享契约，和祁兮讨论了一下，我想祁兮的《共享契约》一文中前端契约测试理念来尝试一下前端契约测试。
 
 *** 前后端共享契约
 在招赢通项目里，我们对契约的实践演化成“共享契约”，
