--- a/articles/Test/contract-test-and-graphql.org
+++ b/articles/Test/contract-test-and-graphql.org
@@ -1,4 +1,3 @@
-
 #+TITLE:  前端契约测试与GraphQL契约模式实践
 #+AUTHOR: 陳放為
 
@@ -6,13 +5,14 @@
 
 ** 引子：
     我曾经在某个项目里呆过，当时我们只有单元测试，还有几套 e2e 测试，不过因为业务进度的压力，只覆盖了几个基本的场景。
+
     
-    不过在当时的开发模式下，前端经历过几次比较严重的 bug，而原因都是因为 API 接口的问题，似乎可以分析一下原因。
+    不过在当时的情况下，前端经历过几次比较严重的 bug，而原因都是因为 API 接口的问题，似乎可以分析一下原因。
 
 
     *为什么会有严重的 bug：*
 
-    其实是因为后端同学因为重构或者新增的业务功能修改了接口，但是没有告诉前端，原因是当时觉得改动很小，就没有告诉前端，也有可能是忘了，anyway，而前端用到这个接口的地方又比较隐蔽，毕竟是已经做了很久的系统，也没有故事卡迭代涉及那块，所以也没有测试人员力量覆盖，最终导致了 bug。
+    其实是因为后端同学因为重构或者新增的业务功能修改了接口，但是没有告诉前端，原因是当时觉得改动很小，就没有告诉前端，也有可能是忘了，anyway，而前端用到这个接口的地方又比较隐蔽，毕竟是已经做了很久的系统，也没有故事卡迭代涉及那块，所以也没有测试人员力量覆盖，最终导致了线上的 bug。
 
 
     可能会有其他非技术手段来防止再次发生，例如做技术任务一定要建卡，改了一定要通知前端之类的约束。
@@ -21,13 +21,14 @@
 
     而 e2e 的测试成本太高（请见测试金字塔理论），我们基于进度的压力也写不了全面的 e2e。
 
+
 *想法💡：*
 
     我们现在的开发模式是前后端分离开发，用的共享契约作为接口定义，而后端已经是实现了契约测试了，也就是说，后端的实现是按照契约的来的。
 
     那么，只要前端对契约进行了测试，那么后端修改了契约，那么前端的测试就能知道，去响应这个变化，防止后端的变化多前端功能破坏。
 
-*于是乎，我们在另一个项目中探索了一下在 GraphQL 契约模式下的前端契约测试实践*
+*于是乎，我们在另一个项目中探索了一下在 GraphQL 下的前端契约测试实践*
 
 ** 前后端共享契约
 
@@ -42,21 +43,21 @@
 3. 前端可以使用Mock Server编写契约测试。
 4. 由于是基于Example的，后端测试的问题也解决了。
 
-总的来说，共享契约就是现在很多项目都在实践的：前端用契约来跑 mock server，可以让前后端的开发工作不互相依赖。
+总的来说，共享契约就是现在很多项目都在实践的：前端用契约来跑 mock server，可以减弱前后端的开发工作之间互相依赖。
 
 
 ** 前端契约测试
 
 *** 为什么要前端契约测试
 
-由前文所述：
+由前文所述，为什么要前端契约测试：
 
 - 接口的变动把控
 - 在发生契约变化时，提供一种可立即被服务端和消费端发现的方式。
 
 *** 我们是怎么做的
 
-在实践中，我们的前端后端没有刻意区分消费者和提供者的概念；我们也没有在前端直接 follow 后端契约测试那一套模式。我们测试了前端 GraphQL 的查询语句是否符合了 GraphQL 契约的定义，如下码：
+在实践中，我们的前端后端没有刻意区分消费者和提供者的概念；我们也没有在前端直接 follow 后端契约测试那一套模式。我们测试了 GraphQL 的查询语句是否符合了 GraphQL 契约的定义，如下码：
 
 
 #+BEGIN_SRC
@@ -95,7 +96,7 @@ query Query {
 
 首先我们没有把这个契约测试想的太复杂和太全面，我们也不想太多工作量在测试契约上，毕竟我们的前后端团队是一个 team，有很多契约的修改，沟通都可以面对面解决；而且契约的修改在项目前期也显得频繁，没有必要花费过多实践在这上面。
 
-其外这种契约测试的模式还在实践中，我们通过契约这种“媒介”，把这种前端契约测试*当作*了一种低成本的集成测试，这样的契约测试在两三个月的敏捷交付中确实能发挥了作用：及时发现了契约在非预期内的变化等等。
+其外这种契约测试的模式还在实践中，我们通过契约这种“媒介”，把这种前端契约测试 *当作* 了一种低成本的集成测试，这样的契约测试在两三个月的敏捷交付中确实能发挥了作用：及时发现了契约在非预期内的变化等等。
 
 *** 契约数据 UI 测试
 
@@ -237,7 +238,7 @@ backend.expectOne(gql`${contract.request.json.query}`).flush(contract.response.j
 
 如果后端要修改某个功能，那他必然会去修改契约，然后契约变化了，必然会导致前端测试挂彩，那么问题来了，如果前端没有人力资源去支持后端这个功能修改的话，那么前端的测试就会挂掉。
 
-如果团队是消费者驱动的模式，只有前端才能去驱动契约修改（这要求消费者一定要比提供者做的快，反之亦然），那么这个问题其实不会出现。
+如果团队是消费者驱动的模式，只有前端才能去驱动契约修改（这要求消费者一定要比提供者做的快，反之亦然），那么这个问题其实不会出现。
 
 在实际上很多情况都不会特别完美，消费者驱动或者提供者驱动的界限不会特别清晰，也有很多种解决方案，例如契约变化了双方都快速响应，或者 ignore 掉测试，或者做出兼容方案等等，这个问题还是要根据具体情况进行修订或者妥协。
 
