--- a/articles/Test/contract-test-and-graphql.org
+++ b/articles/Test/contract-test-and-graphql.org
@@ -36,7 +36,7 @@
 
 在项目里，我们对契约的实践演化成“共享契约”。
 
-关于共享契约可以看一下 MacDao 写的《[[共享契约]]》，共享契约有几个特点:
+关于共享契约可以看一下 Macdao 写的《[[共享契约]]》，共享契约有几个特点:
 
 1. 它和基于Schema的几个工具一样，需要定义契约文件。契约文件独立于前后端代码，前后端开发人员都可以对其制定和修改，契约是前后端共享的，所以称之为共享契约。
 2. 共享契约模式的契约也是基于Example的，所以可以运行成Mock Server。
