Mobile 端 Web 合成层优化

--- a/articles/Browser/Mobile 端 Web 合成层优化.org
+++ b/articles/Browser/Mobile 端 Web 合成层优化.org
@@ -19,18 +19,18 @@
 用 Chrome 的 developer tool 的 Performance 标签
 
 
-[[./Mobile 端 Web 合成层优化/adb08c30d4fbbdf041297f635039d771
+[[image-url:./Mobile 端 Web 合成层优化/adb08c30d4fbbdf041297f635039d771]]
 
 
 
-[[./Mobile 端 Web 合成层优化/e93d1b09d910f33d3ea551e486b2680f
+[[image-url:./Mobile 端 Web 合成层优化/e93d1b09d910f33d3ea551e486b2680f]]
 
 
 
-[[./Mobile 端 Web 合成层优化/6e5cea2b909cd1c69867a5fb445fc22b
+[[image-url:./Mobile 端 Web 合成层优化/6e5cea2b909cd1c69867a5fb445fc22b]]
 
 
-[[./Mobile 端 Web 合成层优化/4945e63701a59fc39663f40707156cfb
+[[image-url:./Mobile 端 Web 合成层优化/4945e63701a59fc39663f40707156cfb]]
 
 
 
