--- a/articles/Tool/如何创建 Filebeat 应用模块.org
+++ b/articles/Tool/如何创建 Filebeat 应用模块.org
@@ -29,7 +29,6 @@ go get -v github.com/elastic/beats
 #+END_QUOTE
 
 ** 创建模块
-
 filebeat 里面有很多内置的模块，模块就是用来区分一个一个日志类型类别的，例如里面内置了 nginx 模块，k8s 模块，httpd 模块等等，所以我们要收集我们的应用日志，就不能使用里面的内置模块，通用模块，需要自己新建一个。
 
 进入 =C:\Users\chenf\go\src\github.com\elastic\beats\filebeat= 目录
@@ -125,7 +124,6 @@ var:
 
 在最下面添加一下配置
 
-
 #+BEGIN_SRC yaml
 processors:
  - decode_json_fields:
@@ -136,13 +134,13 @@ processors:
      overwrite_keys: true
 #+END_SRC
 
-这个配置描述了 decode_json_fields 这个 processors，解析两个字段，title 和 name，target 可以不设置
+这个配置描述了 decode_json_fields 这个 processors，现在只解析两个字段，title 和 name，target 可以不设置
 
 到这里，bar 这个 filebeat 的配置已经基本设置完了
 
 ** 设置 filebeat 
 
-打开 filebeat 根目录下的 =filebeat.yml= 文件，对 elasticsearch output 进行设置
+打开 filebeat 根目录下的 =filebeat.yml= 文件，对 elasticsearch output 进行设置，把我们的 ES 地址，用户名密码什么的设置好
 
 #+BEGIN_SRC yaml
 output.elasticsearch:
@@ -158,6 +156,7 @@ output.elasticsearch:
 
 ** 启动 filebeat 发送到 elastcisearch
 
+启动 filebeat：
 
 #+BEGIN_SRC bash
 ./filebeat -e -c filebeat.yml
@@ -165,7 +164,7 @@ output.elasticsearch:
 
 如果没有报错，就可以到 kibana 上去查看一下，会出现一个叫 filebeat-oyster 的索引
 
-到 kibana 的 discover 页面查看日志的效果如下
+然后到 kibana 的 discover 页面查看日志，效果如下
 
 [[image-url:./如何创建 Filebeat 应用模块/e8c4b0aa62f906904c9af2107b6a60f7]]
 
@@ -193,12 +192,11 @@ CMD ["/filebeat/filebeat", "-e", "-c", "./filebeat.yml"]
 
 #+END_SRC
 
-** 构建思路
-
-直接把 go 的二进制包放进 docker 容器中，即可运行，然后把 module 等这些配置文件夹文件都 copy 进去，就能完美运行
+构建思路就是直接把 go 的二进制包放进 docker 容器中，即可运行，然后把 module 等这些配置文件夹文件都 copy 进去，就能完美运行，这个是要先把 filebeat 下下来，读者也可以直接通过 filebeat 的官方镜像修改，那样会更好一些。
 
 ** 运行 docker 镜像
 
+可以参考一下我的命令
 
 #+BEGIN_SRC
 ``` bash
@@ -228,7 +226,7 @@ docker run --rm \
 上面 filebeat-test 是 filebeat 里面设置的 index 名
 
 * 源码
-最后附上我写这篇文章时候实战的 filebeat 配置代码 https://github.com/fwchen/oyster/tree/filebeat-archive/filebeat ，这个 filebeat 主要就是读取 server (nodejs) 出来的 log 文件，然后通过 filebeat 发送到 elastcisearch 上
+最后附上我写这篇文章时候实战的 filebeat 配置代码 https://github.com/fwchen/oyster/tree/filebeat-archive/filebeat ，这个 filebeat 主要就是读取 server (nodejs) 出来的 log 文件，然后通过 filebeat 发送到 elastcisearch 上
 
 * 参考文章
 1. https://www.elastic.co/cn/blog/structured-logging-filebeat
