--- a/articles/Browser/Web 合成层优化.org
+++ b/articles/Browser/Web 合成层优化.org
@@ -1,5 +1,6 @@
 #+TITLE: Web 合成层优化
 #+AUTHOR: 陳放為
+#+DATE: 2018-11-21
 
 * Web 动画卡顿
 
@@ -88,9 +89,6 @@ javascript > style > layout > paint > composite
 
 
 同时这个属性的原理是提前告诉浏览器可能发生变化的属性，让其提前完成优化工作。所以要预留时间给浏览器优化。当然，当页面主要用途就是动画切换（如相册类），且画面大而复杂的时候，直接在样式设置will-change是合理的。
-
-
-
 
 
 
