--- a/articles/Browser/记一次-Chrome-无法取得证书链经过.org
+++ b/articles/Browser/记一次-Chrome-无法取得证书链经过.org
@@ -10,12 +10,12 @@
 
 这是我用我的 MBP 查看的证书，证书链是有的
 
-[[image-url:./记一次 Chrome 无法取得证书链经过/41ecc0ab33cbdbc8e6cecccc0d973843]]
+[[image-url:./记一次-Chrome-无法取得证书链经过/41ecc0ab33cbdbc8e6cecccc0d973843]]
 
 
 下面是我的 Chromebook 的截图
 
-[[image-url:./记一次 Chrome 无法取得证书链经过/b3fad00791e5ed510e11d1310e00c455]]
+[[image-url:./记一次-Chrome-无法取得证书链经过/b3fad00791e5ed510e11d1310e00c455]]
 
 * 怎么解决的？
 过了一会自己好的，实属惭愧，聊记一笔
